crates/xlate/tests/snapshots/golden_matrix__media_input_image_url_detail__gpt-4o-mini__20260910__responses_to_chat__openai_compatible.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "llama-x",
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "One word."
        },
        {
          "type": "image_url",
          "image_url": {
            "url": "https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/PNG_transparency_demonstration_1.png/280px-PNG_transparency_demonstration_1.png"
          }
        }
      ]
    }
  ],
  "max_tokens": 64
}
--- headers ---
upstream_streams: false
--- degraded ---
ext.responses.image_detail=dropped
